--- a/src/App.css
+++ b/src/App.css
@@ -17,18 +17,19 @@
 /* ///////////  NAVIGATION BAR ////////////////////////// */
 /* /////////////////////////////////////////////////// */
 .navigationBar {
+  /* padding: 10px; */
   display: flex;
   flex-direction: row;
   background-color: white;
   align-items: center;
   min-height: 100px;
-  font-size: 2em;
+  font-size: 28px;
   /* padding-left: 75px; */
   /* text-emphasis-color: rgb(219, 218, 218); */
   color: black;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding-right: 20px;
-  padding-left: 30px;
+  /* padding-right: 5px; */
+  /* padding-left: 5px; */
 }
 
 .logo{
@@ -47,6 +48,7 @@
 .pretraga{
   color: black;
   margin-left: 50px;
+  margin-bottom: 50px;
   padding-top:15px;
   font-size: 30px;
   border-top: none;
@@ -65,14 +67,14 @@
   border-color: rgb(68, 96, 255);
 }
 
-.search{
+/* .search{
   font-style: bold;
   margin-left:70px;
   font-size: 30px;
 }
 .serach:hover{
   color: rgb(68, 96, 255);
-}
+} */
 
 .destinacije{
   padding-top: 10px;
@@ -83,24 +85,24 @@
 
 .destinacije:hover{
   color: rgb(68, 96, 255);
-  transition: 0.5s;
+  transition: 0.7s;
 }
 
 .pregled{
   padding-top: 10px;
   font-style: bold;
   color: black;
-  padding-left: 50px;
+  padding-left: 30px;
   text-decoration: none;
 }
 
 .pregled:hover{
   color: rgb(68, 96, 255);
-  transition: 0.5s;
+  transition: 0.7s;
 }
 
 .prijava{
-  padding-top: 10px;
+  /* padding-top: 10px; */
   font-style: bold;
   font-style: underline;
   color: black;
@@ -114,7 +116,7 @@
 }
 
 .registracija{
-  padding-top: 10px;
+  /* padding-top: 10px; */
   font-style: bold;
   color: black;
   padding-left: 50px;
@@ -126,7 +128,18 @@
   transition: 0.5s;
 }
 
+.kontakt{
+  /* padding-top: 10px; */
+  font-style: bold;
+  color: black;
+  padding-left: 50px;
+  text-decoration: none;
+}
 
+.kontakt:hover{
+  color: rgb(68, 96, 255);
+  transition: 0.5s;
+}
 
 
 /* ///////////////////////////////////////////////////////////////
@@ -138,15 +151,16 @@
 
 
 .nazivKontinenta{
- margin-top: 30px; 
+ margin-top: 30px;
  margin-left: 15px;
 }
 
-.gradovi{
+/* .gradovi{
   display: flex;  
   margin-top:50px;
   color: black;
 }
+
 
 .jedanGrad{
   position: relative;
@@ -157,6 +171,25 @@
   margin-left: 15px;
   margin-right: 15px;
   margin-top: 10px;
+} */
+
+.gradovi{
+  display: grid;
+  grid-template-columns: auto auto auto auto auto auto ;
+  margin-top:50px;
+  color: black;
+}
+
+
+.jedanGrad{
+  position: relative;
+  text-align: center;
+  background-color: white;
+  color: black;
+  border-radius: 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 30px;
 }
 
 
@@ -186,20 +219,29 @@
 }
 
 .btn1 {
+  text-align : center;
   font-style: bold;
   text-justify: center;
   color: white;
-  font-size: 19px;
+  font-size: 20px;
   background-color:rgb(68, 96, 255);
   margin: 5px;
   border-radius: 20px;
-  border-width: 0px;
+  border-width: 0px;  
+  box-shadow: 0 3px #999;
+
 }
 .btn1:hover{
+  font-size: 25px;
   font-style: bold;
   background-color:transparent;
-  transition:0.2s;
+  transition:0.4s;
   color:rgb(68, 96, 255);
+}
+
+.btn1:active{
+  box-shadow: 0 2px #666;
+  transform: translateY(5px);
 }
 
 .btn2 {
@@ -211,15 +253,23 @@
   margin: 5px;
   border-radius: 20px;
   border-width: 0px;
+  box-shadow: 0 3px #999;
 }
 .btn2:hover{
+  font-size: 25px;
   font-style: bold;
   background-color:transparent;
-  transition: 0.2s;
+  transition: 0.4s;
   color:rgb(68, 96, 255);
 }
 
+.btn2:active{
+  box-shadow: 0 2px #666;
+  transform: translateY(5px);
+}
+
 .btn3 {
+  text-align : center;
   font-style: bold;
   text-justify: center;
   color: white;
@@ -228,12 +278,19 @@
   margin: 5px;
   border-radius: 20px;
   border-width: 0px;
+  box-shadow: 0 3px #999;
 }
 .btn3:hover{
+  font-size: 25px;
   font-style: bold;
   background-color:transparent;
-  transition: 0.2s;
+  transition: 0.4s;
   color:rgb(68, 96, 255);
+}
+
+.btn3:active{
+  box-shadow: 0 2px #666;
+  transform: translateY(5px);
 }
 
 
@@ -344,10 +401,244 @@
 
 
 
+/* /////////////////////////////////////////////////////
+/////////////////KONTAKT STRANICA/////////////////////
+//////////////////////////////////////////////////// */
 
-/* 
-////////////////////////////////////////////////////////////
-////////// FORMA REGISTRACIJA //////////////////////////////
-///////////////////////////////////////////////////////////// */
+.kontaktInformacije{
+  display: grid;
+  position: relative;
+  grid-template-columns: auto auto;
+  transform: translate(0%, 60%);
+  margin-bottom: 100px;
+}
 
 
+/* /////////////////////////////////////////////////////
+///////////////// KRAJ KONTAKT STRANICE///////////////
+//////////////////////////////////////////////////// */
+
+
+
+/* /////////////////////////////////////////////////////
+/////////////////STRANICA REZERVACIJE/////////////////////
+//////////////////////////////////////////////////// */
+
+.rezervacije{
+  position : center;
+  text-align : center;
+  transform: translate(0%, 30%);
+}
+
+table.tabela{
+  font-family: arial, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:20px;
+  margin-bottom:50px;
+  width:60%;
+  font-size: 25px;
+}
+
+td, th{
+  border: 1px solid rgb(68, 96, 255);
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+
+tr:hover {
+  background-color: rgb(189, 199, 255);
+ }
+
+.dugmeKomponenta{
+  position: center;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.dugmeSortiranje{
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px ;
+  border : 1px solid rgb(68, 96, 255);
+  position: center;
+  background-color:rgb(68, 96, 255);
+  color:white;
+  padding:10px;
+  font-size:25px;
+  text-align: center;
+  margin-bottom: 90px;
+
+  transition-duration: 0.4s;
+}
+
+.dugmeSortiranje:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(68, 96, 255);
+  font-size: 27px; 
+}
+
+.dugmeSortiranje:active{
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+/* /////////////////////////////////////////////////////
+////////////KRAJ STRANICE REZERVACIJE//////////////////
+/////////////////////////////////////////////////////*/
+
+
+
+
+/* /////////////////////////////////////////////////////
+////////////BOTTOM BAR ////////////////////////////////
+/////////////////////////////////////////////////////*/
+
+.bottomBar{
+  display: grid;
+  position: relative;
+  text-align: center;
+  grid-template-columns: auto auto auto;
+  /* transform: translate(0%, 60%); */
+  margin-top: 100px;
+  margin-right: 35px;
+  background-color: rgb(208, 224, 255);
+  font-size: 20px;
+  bottom: 3px;
+}
+
+
+/* /////////////////////////////////////////////////////
+//////////// KRAJ BOTTOM BAR ///////////////////////////
+///////////////////////////////////////////////////////*/
+
+
+
+/* /////////////////////////////////////////////////////
+//////////// UPRAVLJAJ DESTINACIJAMA ///////////////////
+///////////////////////////////////////////////////////*/
+
+table.tabelaDestinacije{
+  font-family: arial, sans-serif;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top:20px;
+  margin-bottom:50px;
+  width:90%;
+  font-size: 25px;
+}
+
+.upravljajDestinacijama{
+  display: grid;
+  position: relative;
+  grid-template-columns: auto auto;
+  transform: translate(0%, 60%);
+  margin-bottom: 100px;
+  margin-top: 20px;
+}
+
+.buttonsUpravljajDestinacijama{
+  text-align: center;
+  padding:20px;
+  justify-content: space-between;
+}
+
+.dugmeIzmeni{
+  padding: 10px;
+  margin-left: auto;
+  margin-right: 3rem;
+  border-radius: 20px ;
+  border : 1px solid rgba(0, 255, 21, 0.733);
+  position: center;
+  background-color:rgba(0, 255, 21, 0.733);
+  color:white;
+  padding:10px;
+  font-size:25px;
+  text-align: center;
+  margin-bottom: 90px;
+
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  transition-duration: 0.4s;
+}
+
+.dugmeIzmeni:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgba(0, 255, 21, 0.733);
+  /* font-size: 27px;  */
+}
+
+.dugmeIzmeni:active{
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+.dugmeObrisi{
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 20px ;
+  border : 1px solid rgb(255, 51, 51);
+  position: center;
+  background-color:rgb(255, 51, 51);
+  color:white;
+  padding:10px;
+  font-size:25px;
+  text-align: center;
+  margin-bottom: 90px;
+
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  transition-duration: 0.4s;
+}
+
+.dugmeObrisi:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(255, 51, 51);
+  /* font-size: 27px;  */
+}
+
+.dugmeObrisi:active{
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+.dugmeDodajNoviGrad{
+   margin-left: auto; 
+   margin-right: auto;
+   margin-top: 100px;  
+  border-radius: 20px ;
+  border : 1px solid rgb(68, 96, 255);
+  position: center;
+  background-color:rgb(68, 96, 255);
+  color:white;
+  padding:10px;
+  font-size:25px;
+  text-align: center;
+  margin-bottom: 90px;
+
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  padding-right: 30px;
+
+  transition-duration: 0.4s;
+}
+
+.dugmeDodajNoviGrad:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(68, 96, 255);
+  font-size: 27px;
+}
+
+.dugmeDodajNoviGrad:active{
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
