--- a/src/App.css
+++ b/src/App.css
@@ -406,11 +406,23 @@
 //////////////////////////////////////////////////// */
 
 .kontaktInformacije{
+  background-color:rgb(255, 255, 255);
   display: grid;
   position: relative;
   grid-template-columns: auto auto;
-  transform: translate(0%, 60%);
+  transform: translate(0%, 30%);
   margin-bottom: 100px;
+  min-height:400px;
+
+}
+
+
+.mapa{
+  margin-right:35px;
+  margin-left:20px;
+  border:2px solid #333;
+  width:40vw;
+  height:100%;
 }
 
 
@@ -428,6 +440,7 @@
   position : center;
   text-align : center;
   transform: translate(0%, 30%);
+  min-height:500px;
 }
 
 table.tabela{
