--- a/src/App.css
+++ b/src/App.css
@@ -516,7 +516,7 @@ tr:hover {
   grid-template-columns: auto auto auto;
   /* transform: translate(0%, 60%); */
   margin-top: 100px;
-  margin-right: 35px;
+  margin-right: 30px;
   background-color: rgb(208, 224, 255);
   font-size: 20px;
   bottom: 3px;
@@ -583,7 +583,7 @@ table.tabelaDestinacije{
 .dugmeIzmeni:hover{
   background-color: rgb(255, 255, 255);
   color: rgba(0, 255, 21, 0.733);
-  /* font-size: 27px;  */
+  font-size: 25px; 
 }
 
 .dugmeIzmeni:active{
@@ -615,7 +615,7 @@ table.tabelaDestinacije{
 .dugmeObrisi:hover{
   background-color: rgb(255, 255, 255);
   color: rgb(255, 51, 51);
-  /* font-size: 27px;  */
+  font-size: 25px;
 }
 
 .dugmeObrisi:active{
@@ -654,4 +654,43 @@ table.tabelaDestinacije{
 .dugmeDodajNoviGrad:active{
   box-shadow: 0 3px #666;
   transform: translateY(5px);
+}
+
+
+
+.dugmeUpravljajDestinacijama{
+  border-radius: 18px;
+  position: center;
+  background-color:rgb(68, 96, 255);
+  color:white;
+  padding: 10px;
+  padding-left: 40px;
+  padding-right:40px;
+  text-align: center;
+  border : 1px solid rgb(68, 96, 255);
+  transition-duration: 0.4s;
+}
+
+.dugmeUpravljajDestinacijama:hover{
+  background-color:white;
+  color: rgb(68, 96, 255);
+}
+
+.dugmeUpravljajDestinacijama:active{
+  box-shadow: 0 3px #666;
+  transform: translateY(5px);
+}
+
+
+/* ////////////////// JUMBOTRON ///////////////////// */
+.jumbotron {
+  margin-right: 30px;
+  margin-top: 50px;
+  padding: 12rem 9rem;
+  margin-bottom: 2rem;
+  background-color: rgb(208, 224, 255);
+  border-radius: .3rem;  
+}
+.lead{
+  font-size: 2em;
 }
