--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@
 
 .gradovi{
   display: grid;
-  grid-template-columns: auto auto auto auto auto auto ;
+  grid-template-columns: auto auto auto auto auto ;
   margin-top:50px;
   color: black;
 }
@@ -468,7 +468,7 @@ tr:hover {
 .dugmeKomponenta{
   position: center;
   text-align: center;
-  margin-bottom: 50px;
+  margin-bottom: 150px;
 }
 
 .dugmeSortiranje{
@@ -688,7 +688,7 @@ table.tabelaDestinacije{
   margin-top: 50px;
   padding: 12rem 9rem;
   margin-bottom: 2rem;
-  background-color: rgb(208, 224, 255);
+  background-color: rgb(177, 229, 255);
   border-radius: .3rem;  
 }
 .lead{
