--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   background-color: white;
   align-items: center;
   min-height: 100px;
-  font-size: 28px;
+  font-size: 23px;
   /* padding-left: 75px; */
   /* text-emphasis-color: rgb(219, 218, 218); */
   color: black;
@@ -345,14 +345,17 @@
 .dugme1{
   border-radius: 10px !important;
   position: center;
-  background-color:rgb(104, 126, 253);
-  color:black;
+  background-color:rgb(68, 96, 255);
+  border-color:rgb(68, 96, 255);
+  color:white;
   width: 100%;
   text-align: center;
+  transition: 0.4s;
 }
 
 .dugme1:hover{
-  background-color:rgb(130, 149, 255);
+  background-color:white;
+  color:rgb(68, 96, 255);
 }
 
 .btnForma1{
@@ -421,8 +424,8 @@
   margin-right:35px;
   margin-left:20px;
   border:2px solid #333;
-  width:40vw;
-  height:100%;
+  width:45vw;
+  height:110%;
 }
 
 
@@ -517,7 +520,7 @@ tr:hover {
   /* transform: translate(0%, 60%); */
   margin-top: 100px;
   margin-right: 30px;
-  background-color: rgb(208, 224, 255);
+  background-color: rgb(177, 229, 255);
   font-size: 20px;
   bottom: 3px;
 }
