--- a/src/App.css
+++ b/src/App.css
@@ -478,7 +478,7 @@ tr:hover {
 .dugmeKomponenta{
   position: center;
   text-align: center;
-  margin-bottom: 150px;
+  margin-bottom: 0px;
 }
 
 .dugmeSortiranje{
@@ -506,6 +506,12 @@ tr:hover {
 .dugmeSortiranje:active{
   box-shadow: 0 3px #666;
   transform: translateY(5px);
+}
+
+.dugmePotvrdaRezervacija{
+  position: center;
+  text-align: center;
+  margin-bottom: 10px;
 }
 
 /* /////////////////////////////////////////////////////
